--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Lato,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: Lato,sans-serif;
 }
 
 * {
@@ -18,5 +15,5 @@ code {
 
 html, body {
   overflow: hidden;
-  font-family: Helvetica, san-serif;
+  font-family: Lato,sans-serif;
 }
